This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

03-Jan 2009 (Zesstra)
  - (efuns.c, efuns.h, func_spec)
    Extended present_clone() to optionally search for the <n>th object in the
    environment.

30-Dec 2008 (Zesstra)
  - (array.h, comm.c, smalloc.c, slaballoc.c, xptmalloc.c, xalloc.c,
      sprintf.c)
    Changed some code defines and pre-compiler constants to static inline
    functions and enums (partially from Largo, thanks!)

26-Dec 2008 (Zesstra)
  - (object.c)
    Fixes a forgotten increment of a ref count in f_rename_object().
    
24-Dec 2008 (Gnomi)
  - (ed.c)
    The reference count of the filename and the exit function
    wasn't cleared in a GC. (Bug #398)
  - (prolang.y)
    Switch now explicitly expects case/default statements in the switch
    block and puts the non-case statements afterwards into their own
    block scope. (Bug #584)
  
15-Dec 2008 (Zesstra)
  - (object.c)
    Fixed potential crashes in rename_object() and replace_program() due to
    stack overflows. (Bug #581)

14-Dec 2008 (Gnomi)
  - (src/interpret.c, src/autoconf/*)
    Added option to show the evaluation costs in the stacktrace.
  - (src/pkg-iksemel.c, many files)
    Added support for XML parsing with iksemel. (Bug #538, thanks, Bardioc!)
            (Zesstra)
  - (efuns.c)
    Fixed potential crashes due to stack overflows in process_string(),
    regexplode(), regexp() and present_clone(). (Bug #578)
  - (interpret.h, interpret.c, efuns.c, mudlib/sys/debug_info.h,
    doc/efun/debug_info, doc/efuns.de/debug_info.de)
    Added control_stack_depth() to determine the number of frames on the
    control stack and added flag DIT_CURRENT_DEPTH to
    debug_info(DINFO_TRACE,...).
  - (interpret.c)
    Replaced call to exit() by a call to fatal() in asster_master_ob_loaded()
    to allow core dumpes to be written in cases when the master object could